--- a/FloatingBubbleView/src/main/res/drawable/remove_icon_gradient_background.xml
+++ b/FloatingBubbleView/src/main/res/drawable/remove_icon_gradient_background.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:startColor="#99000000"
+        android:endColor="@color/transparent"
+        android:angle="90"/>
+</shape>
