--- a/FloatingBubbleView/src/main/res/layout/close_icon.xml
+++ b/FloatingBubbleView/src/main/res/layout/close_icon.xml
@@ -5,15 +5,15 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
 
-    android:background="@drawable/remove_icon_gradient_background"
-    android:paddingBottom="@dimen/margin_biggest"
-    android:paddingTop="@dimen/padding_big"
+    android:background="@drawable/close_icon_gradient_background"
+    android:paddingBottom="50dp"
+    android:paddingTop="12dp"
     >
 
     <ImageView
         android:id="@+id/homeLauncherMainBinIcon"
-        android:layout_width="@dimen/size_remove_view"
-        android:layout_height="@dimen/size_remove_view"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
 
         android:layout_gravity="center"
 
