feat: fix bubble outside screen, add more api, replace hard assignment

--- a/FloatingBubbleView/src/main/res/layout/icon_main.xml
+++ b/FloatingBubbleView/src/main/res/layout/icon_main.xml
@@ -7,7 +7,7 @@
     >
 
     <ImageView
-        android:id="@+id/homeLauncherMainIcon"
+        android:id="@+id/bubbleView"
         android:layout_width="55dp"
         android:layout_height="55dp"
 
