--- a/FloatingBubbleView/src/main/res/layout/close_icon.xml
+++ b/FloatingBubbleView/src/main/res/layout/close_icon.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
+    android:id="@+id/closeBubbleLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,7 +12,7 @@
     >
 
     <ImageView
-        android:id="@+id/homeLauncherMainBinIcon"
+        android:id="@+id/closeBubbleImg"
         android:layout_width="65dp"
         android:layout_height="65dp"
 
