--- a/FloatingBubbleView/src/main/res/layout/close_bubble.xml
+++ b/FloatingBubbleView/src/main/res/layout/close_bubble.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/closeBubbleLayout"
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -8,9 +7,8 @@
 
     <ImageView
         android:id="@+id/closeBubbleImg"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:background="@drawable/circle_shape"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         />
 
-</LinearLayout>
+</FrameLayout>
