--- a/FloatingBubbleView/src/main/res/layout/bubble.xml
+++ b/FloatingBubbleView/src/main/res/layout/bubble.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.torrydo.floatingbubbleview.MyBubbleLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bubbleRoot"
     android:layout_width="wrap_content"
@@ -24,4 +25,4 @@
         android:visibility="gone"
         />
 
-</LinearLayout>
+</com.torrydo.floatingbubbleview.MyBubbleLayout>
