--- a/FloatingBubbleView/src/main/res/layout/bubble.xml
+++ b/FloatingBubbleView/src/main/res/layout/bubble.xml
@@ -1,28 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.torrydo.floatingbubbleview.MyBubbleLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/bubbleRoot"
+<com.torrydo.floatingbubbleview.MyBubbleLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    >
-
-    <ImageView
-        android:id="@+id/bubbleImg"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-
-        android:src="@drawable/ic_rounded_blue_diamond"
-
-        android:visibility="gone"
-        tools:ignore="ContentDescription" />
-
-    <androidx.compose.ui.platform.ComposeView
-        android:id="@+id/view_compose"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        />
-
-</com.torrydo.floatingbubbleview.MyBubbleLayout>
+    />
